门店添加提示谁正在走流程，当为合作店时其租赁信息变成非必填项

--- a/WebContent/data_access/add_store.html
+++ b/WebContent/data_access/add_store.html
@@ -379,7 +379,7 @@ function downloadFile(pic_name){
 		}
 		
 		if(storetype!='V'){
-			if(nature_value=='合租店'){
+			if(nature_value=='合作店'){
 				if(county_name == "" || county_name == null){
 					$("#submit").removeAttr("disabled");
 					alert("请选择区域!");
