小程序适配设置热力图高度

--- a/WebContent/crm/518.html
+++ b/WebContent/crm/518.html
@@ -115,7 +115,7 @@
     .proportion li{padding: 10px 1.5%;}
     .proportion .product_num{width: 30px; text-align: center; top: 16px;}
     .proportion .product_nav{margin-left: 30px;}
-    .relitu{position: relative; margin: 50px 0px 0 -20px; color: #fff;}
+    .relitu{position: relative; margin: 50px 0px 0 -20px; color: #fff;height:250px;}
     select{border: 0; border-bottom: 1px solid #2f1db2; background-color: transparent; width: 50%; color: #fff; outline: none;}
     select option{color: #666;}
     #mapContainer {
