修改社员文字显示

--- a/WebContent/crm/518.html
+++ b/WebContent/crm/518.html
@@ -335,11 +335,11 @@
       </div>
       <div class="clearfix conusers">
         <div class="pull-left">
-          <p>消费用户数：<span id="pay_customer">Loading</span></p>
+          <p>今日消费用户数：<span id="pay_customer">Loading</span></p>
           <!--<p>Consumer number</p>-->
         </div>
         <div class="pull-right text-right">
-          <p>新增社员数：<span id="vip_customer">Loading</span></p>
+          <p>累计社员总数：<span id="vip_customer">Loading</span></p>
           <!--<p>New user occupation ratio</p>-->
         </div>
       </div>
