暂时屏蔽用户档案

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -104,7 +104,7 @@
                                     </dl>
                                     <dl class="pull-left">
                                         <dt><i></i>档案数据</dt>
-                                        <dd><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a></dd>
+<!--                                         <dd><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a></dd> -->
                                         <dd><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>
                                         <dd><a href="javascript:searchEmployeeData()"><span class="fa fa-newspaper-o"></span>员工档案</a></dd>
                                         <dd><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
