--- a/WebContent/crm/userProfile_view.html
+++ b/WebContent/crm/userProfile_view.html
@@ -1157,8 +1157,8 @@ Date.prototype.format=function(fmt) {
 				   	   		+"<td><a href=\"#\" onmouseover=\"showinfo('"+customercontent+"');\" id=\""+customerid+"\">"+customer_phone_show+"</a></td>"
 				   	   		+"<td><a href=\"#\" onmouseover=\"showinfo('"+paycontent+"');\" id=\""+payid+"\">"+jData[i].order_count+"</a></td>"
 		         	   		+"<td>"+jData[i].slient_time+"</td>"
-// 		         	   		+"<td>"+jData[i].tiny_village_code+"</td>"
-		         	   		+"<td><a href=\"#\" style=\"color:#0FA6D8\" onclick=\"showuserdetail('"+jData[i].area_code+"','"+jData[i].tiny_village_code+"','"+jData[i].customer_id+"','"+cbelongid+"');\" id=\""+cbelongid+"\">"+jData[i].tiny_village_code+"</a></td>"
+		         	   		+"<td>"+jData[i].tiny_village_code+"</td>"
+// 		         	   		+"<td><a href=\"#\" style=\"color:#0FA6D8\" onclick=\"showuserdetail('"+jData[i].area_code+"','"+jData[i].tiny_village_code+"','"+jData[i].customer_id+"','"+cbelongid+"');\" id=\""+cbelongid+"\">"+jData[i].tiny_village_code+"</a></td>"
 		         	   		+"<td>"+jData[i].user_model+"</td>"
 		         	   		+"<td>";
 		         	   		
