--- a/WebContent/crm/userProfile_view.html
+++ b/WebContent/crm/userProfile_view.html
@@ -183,9 +183,9 @@
                 	<div class="sl-v-list">
                 	<div class="clearfix">
                 		<div class="search-con">
-							<div class="time" id="time_flag" style="width: 325px;z-index: 99999;margin:0 15px;">
+							<div class="time" id="time_flag" style="width: 325px;z-index: 99999;margin:3px 15px;">
 							    <div class="time_endbg" id="first_time_endbg">
-							        <p>首次消费日期选择：<span class="data_choice" id="first_data_choice">默认时期</span></p>
+							        <p>首次消费日期选择 <span class="data_choice" id="first_data_choice"></span></p>
 							        <input type="text" class="ui-datepicker-time" id="first_date" readonly value=""/>
 							    </div>
 							</div>
