fix searchData reset

--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -1474,6 +1474,7 @@ Date.prototype.format=function(fmt) {
   	  }else if(target==1){
   		$("#store_name_manual").val("");
   	  }
+  	$("#store_id_manual").val("");  
  	$("#customer_phone_manual").val("");
 	$("#customer_name_manual").val("");
 	$("#addr_phone_manual").val("");
