--- a/WebContent/crm/userProfile_detail.html
+++ b/WebContent/crm/userProfile_detail.html
@@ -156,8 +156,8 @@ function initOrderDetail(customer_id){
 						var html = "<tr>"+
 						"<td class=\"lh128\">"+obj.city_name+"</td>"+
 						"<td class=\"lh128\">"+obj.store_name+"</td>"+
-// 		                "<td class=\"lh128\"><a style=\"color:#0FA6D8\" href=\"javascript:searchArea('','"+obj.area_code+"')\">"+obj.area_code+"</a></td>"+
-		                "<td class=\"lh128\">"+obj.area_code+"</td>"+
+		                "<td class=\"lh128\"><a style=\"color:#0FA6D8\" href=\"javascript:searchArea('','"+obj.area_code+"')\">"+obj.area_code+"</a></td>"+
+// 		                "<td class=\"lh128\">"+obj.area_code+"</td>"+
 		                "<td class=\"lh128\">"+obj.tiny_village_code+"</td>"+
 		                "<td class=\"lh128\">"+obj.employee_a_no+"</td>"+
 		                "<td class=\"lh128\">"+obj.first_order_time+"</td>"+
