添加社员邀请码一列字段。页面提交

--- a/WebContent/data_access/store_keeper_list.html
+++ b/WebContent/data_access/store_keeper_list.html
@@ -166,6 +166,12 @@
                 	ret=value;
                 }
                 return ret;
+            },"inviteCode": function(aData, iColumn, sColumnName, map){
+                var value = map[sColumnName];
+                if(value!=null&&value.length>0){
+                	value="【"+value+"】";
+                }
+                return value;
             }
         }
     
