修改社员邀请码样式

--- a/WebContent/data_access/human_store_list_dz.html
+++ b/WebContent/data_access/human_store_list_dz.html
@@ -131,8 +131,8 @@
             "inviteCode": function(aData, iColumn, sColumnName, map){
                 var value = map[sColumnName];
                	if(value!=null&&value.length>0){
-               		value="【"+value.substring(0,6)+"】<label class='clickcode' onclick='javascript:copycode("+value+")' style='cursor:pointer;'>复制</label>";
-               		//value="【"+value.substring(0,6)+"】"; 
+               		//value="【"+value.substring(0,6)+"】<label class='clickcode' onclick='javascript:copycode("+value+")' style='cursor:pointer;'>复制</label>";
+               		value=value.substring(0,6); 
                	}
                 return value;
             }
