optimize time-control code

--- a/WebContent/crm/userProfile_view.html
+++ b/WebContent/crm/userProfile_view.html
@@ -196,7 +196,7 @@
 							        <input class="ui-date-quick-button" type="button" value="7天内" alt="-6" name=""/>
 							        <input class="ui-date-quick-button" type="button" value="30天内" alt="-29" name=""/>
 							        <input class="ui-date-quick-button" type="button" value="60天内" alt="-59" name=""/>
-							        <input class="ui-date-quick-button" type="button" value="90天内" alt="-89" name=""/>
+							        <input class="ui-date-quick-button" type="button" value="全部" alt="1" name=""/>
 							        <span class="ui-close-date" id="first-ui-close-date" style="cursor:pointer;">X</span>
 							    </div>
 							    <div class="ui-datepicker-choose">
