--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -87,7 +87,7 @@
                                         <dt><i></i>运营数据</dt>
                                         <dd><a href="javascript:goToTurnoverStat()"><span class="fa fa-money"></span>营业额统计</a></dd>
                                         <dd><a href="javascript:goToUserOperationStat()"><span class="fa fa-user-plus"></span>用户运营</a></dd>
-                                        <dd><a href="javascript:goToUserMember()"><span class="fa fa-user"></span>合作社社员统计</a></dd>
+                                        <dd><a href="javascript:goToUserMember()"><span class="fa fa-rocket"></span>合作社社员统计</a></dd>
                                         <dd id="city_net"><a href="javascript:goToCityNet()"><span class="fa fa-institution"></span>线下网络体系</a></dd>
                                         <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-cubes"></span>产品运营</a></dd>
                                         <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-comments-o"></span>混片情况</a></dd>
@@ -130,7 +130,7 @@
                                 <div class="secNav-box">
                                 	<dl class="col-sm-3">
                                         <dt><i></i>产品模型</dt>
-                                        <dd id="member_analysis"><a href="javascript:toToMemberAnalysis()"><span class="fa fa-sitemap"></span>安心合作社</a></dd>
+                                        <dd id="member_analysis"><a href="javascript:toToMemberAnalysis()"><span class="fa fa-puzzle-piece"></span>安心合作社</a></dd>
                                     </dl>
                                     <dl class="col-sm-3">
                                         <dt><i></i>社区模型</dt>
