fix redirect url

--- a/WebContent/crm/518.html
+++ b/WebContent/crm/518.html
@@ -596,7 +596,7 @@
 		    var callback = function callback(data, textStatus, XMLHttpRequest) {
 		    	//window.parent.location=getRootPath() + "/crm/index_K.html?pls=0";
 		    	var stateObject = {};
-		    	var newUrl = "/daqWeb/crm/index_K.html?ta=0";
+		    	var newUrl = "/daqWeb/crm/518.html?ta=0";
 		    	history.pushState(stateObject,null,newUrl);
 			};
 		    var failureCallback = function failureCallback(data, textStatus, XMLHttpRequest) {
