--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>社员合作中心</title>
+  <title>安心合作社</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=0.3, maximum-scale=1, user-scalable=yes" name="viewport">  <!-- Bootstrap 3.3.6 -->
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -91,7 +91,7 @@
         <div class="box box-default report">
           <div class="box-header h4">
           	<strong>安心合作社运营报告</strong>
-          	<a style="float: right;margin-right: 50px;color:#00acee; " href="user_member_view.html">社员信息查询</a> 
+          	<a style="float: right;margin-right: 50px;color:#00acee;" href="user_member_view.html"  target="_blank">社员信息查询</a> 
           </div>
           <div class="box-body">
             <div class="col-sm-5"><img src="dist/img/member1.png"> </div>
@@ -99,9 +99,9 @@
               <div class="col-sm-6" id="main2" style="height: 350px;"></div>
               <ul class="col-sm-6">
                  <br/>
-                <li><i class="fa fa-file-text-o"></i>成交量：<span id="cmGoodsDealCount"></span></li>
-                <li><i class="fa fa-database"></i>成交金额：￥<span id="cmGoodsTurnover"></span></li>
-                <li><i class="fa fa-bank"></i>E店：<span id="eShopCount"></span></li>
+                <li><i class="fa fa-file-text-o"></i>订单量：<span id="cmGoodsDealCount"></span></li>
+                <li><i class="fa fa-database"></i>GMV：￥<span id="cmGoodsTurnover"></span></li>
+                <li><i class="fa fa-bank"></i>E店数：<span id="eShopCount"></span></li>
                 <li><i class="fa fa-cube"></i>SKU：<span id="skuCount"></span></li>
               </ul>
             </div>
@@ -174,6 +174,28 @@
 <script src="dist/js/echarts.common.min.js"></script>
 <script src="dist/js/nav-scroll.js"></script>
 <script>
+
+	var screenlogin=getUrlParamByKey("su");
+	function loginShow(){
+		
+		if(screenlogin!=null&&screenlogin!=''&&screenlogin!=undefined){
+			var reObj = new PMSRequestObject("userManager", "isScreenUser", [ screenlogin ]);
+		    var callback = function callback(data, textStatus, XMLHttpRequest) {
+		    	//window.parent.location=getRootPath() + "/crm/index_K.html?pls=0";
+		    	var stateObject = {};
+		    	var newUrl = "/daqWeb/crm/member_analysis?ta=0";
+		    	history.pushState(stateObject,null,newUrl);
+			};
+		    var failureCallback = function failureCallback(data, textStatus, XMLHttpRequest) {
+				alert("登录信息错误，请确认输入或联系管理员!");
+				return false;
+			}
+		    var url = "../login.do";
+		    $$.ajax(url, "requestString=" + reObj.toJsonString(), callback, failureCallback); 
+		}
+		
+	}
+
   var showMemberGrow = function (dataServer){
 	  var myChart1 = echarts.init(document.getElementById('main1'));
 	  //社员人数
@@ -365,7 +387,7 @@
 	    series: [{
 	      type: 'pie',
 	      selectedMode: 'single',
-	      radius: ['40%', '90%'],
+	      radius: ['20%', '80%'],
 	      color: ['#AF89D6', '#59ADF3', '#FF999A', '#FFCC67','#FCC667','#CC5962'],
 
 	      label: {
@@ -444,7 +466,7 @@
 	    }],
 	    series: [{
 	      hoverAnimation: false, //设置饼图默认的展开样式
-	      radius: ['40%', '90%'],
+	      radius: ['20%', '80%'],
 	      name: 'pie',
 	      type: 'pie',
 	      selectedMode: 'single',
@@ -517,7 +539,7 @@
 	          },
 	      {
 	        type:'pie',
-	        radius: ['42%', '90%'],
+	        radius: ['20%', '80%'],
 	        color: ['#d74e67', '#0092ff', '#eba954', '#21b6b9','#60a900','#01949b',' #f17677','#915872', '#3077b7', '#9a8169', '#3f8797','#5b8144','#307889','#9c6a79'],
 	        label: {
 	          normal: {
@@ -557,7 +579,7 @@
 	      clockwise: false, //饼图的扇区是否是顺时针排布
 	      minAngle: 20, //最小的扇区角度（0 ~ 360）
 	      center: ['50%', '50%'], //饼图的中心（圆心）坐标
-	      radius: ['40%', '90%'], //饼图的半径
+	      radius: ['20%', '80%'], //饼图的半径
 	      avoidLabelOverlap: true, ////是否启用防止标签重叠
 	      itemStyle: { //图形样式
 	        normal: {
@@ -660,6 +682,7 @@
 <script type="text/javascript">
 
  $(function () {
+	 loginShow();
 	 //获取社员量
     doManager('communeMember','selectAllCm',"kkl",function(data){
         if(data.result){
